--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test GitHub Pages</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-    </style>
+    <title>Détails de l'élève</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>GitHub Pages fonctionne ! 🎉</h1>
-    <p>Si vous voyez ce message, c'est que tout est configuré correctement.</p>
+    <h1 id="titre-eleve">Élève</h1>
+    <h2>Exercices</h2>
+    <ul id="liste-exercices"></ul>
+
+    <a href="index.html">Retour à la liste des élèves</a>
+
+    <script src="script.js"></script>
 </body>
 </html>
