--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,6 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #f7f7f7;
         }
         #eleveForm {
             margin-bottom: 20px;
@@ -18,6 +20,13 @@
         }
         li {
             padding: 5px 0;
+        }
+        a {
+            text-decoration: none;
+            color: blue;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -42,14 +51,20 @@
             ulListeEleves.innerHTML = '';
             listeEleves.forEach((eleve, index) => {
                 const li = document.createElement('li');
-                li.textContent = eleve;
+                const lien = document.createElement('a');
+                lien.textContent = eleve;
+                lien.href = `eleve.html?index=${index}`;
 
                 // Ajouter un bouton pour supprimer l'élève
                 const btnSupprimer = document.createElement('button');
                 btnSupprimer.textContent = 'Supprimer';
                 btnSupprimer.style.marginLeft = '10px';
-                btnSupprimer.onclick = () => supprimerEleve(index);
-                
+                btnSupprimer.onclick = (e) => {
+                    e.preventDefault(); // Empêcher la navigation lors de la suppression
+                    supprimerEleve(index);
+                };
+
+                li.appendChild(lien);
                 li.appendChild(btnSupprimer);
                 ulListeEleves.appendChild(li);
             });
@@ -82,4 +97,3 @@
     </script>
 </body>
 </html>
-
