--- a/eleve.html
+++ b/eleve.html
@@ -56,6 +56,16 @@
                 lien.textContent = eleve;
                 lien.href = `eleve.html?index=${index}`;
 
+                lien.addEventListener('click', (e) => {
+                    e.preventDefault(); // Empêcher la navigation par défaut
+                    const eleveIndex = parseInt(new URLSearchParams(new URL(lien.href).search).get('index'), 10);
+                    if (!isNaN(eleveIndex) && listeEleves[eleveIndex]) {
+                        window.location.href = `eleve.html?index=${eleveIndex}`;
+                    } else {
+                        alert('Données d’élève introuvables ou corrompues.');
+                    }
+                });
+
                 // Ajouter un bouton pour supprimer l'élève
                 const btnSupprimer = document.createElement('button');
                 btnSupprimer.textContent = 'Supprimer';
